tests/errors/se_badindent.pyx
def f():
  a = b # space space
 	c = d # space tab
_ERRORS = u"""
/Local/Projects/D/Pyrex/Source/Tests/Errors1/se_badindent.pyx:3:0: Mixed use of tabs and spaces
"""
